--- a/src/components/itemList/ItemList.css
+++ b/src/components/itemList/ItemList.css
@@ -25,7 +25,7 @@
   width:100%;
   width: 400%;
   position: relative;
-  border: 2px solid rgb(44, 157, 157);
+  border: 4px solid rgb(44, 157, 157);
   border-radius: 8px;
   justify-content: center;
   color:rgb(110, 237, 237);;
@@ -61,8 +61,8 @@ hr{
 
 header img{
   max-width: 100%;
-  border-top-right-radius: 6px;
-  border-top-left-radius: 6px;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
   object-fit: cover;
   overflow: hidden;
   width: 400px;
@@ -71,7 +71,7 @@ header img{
 }
 
 .productTitle, .productDescription{
-  font-size: 1rem;
+  
   font-weight: 500;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -94,12 +94,15 @@ main.mainCard{
   color: rgb(110, 237, 237);
   padding: 0 8px 0 8px;
   font-weight: 900;
+  font-size: 1rem;
 
 }
 
 .productDescription{
   -webkit-line-clamp: 2;
   padding: 0 8px 0 8px;
+  font-size: 0.7rem;
+
 }
 
 .footerContainer{
