--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -39,34 +39,6 @@ gap: 8px;
   text-shadow:none;
 }
 
-/* 
-
-
-
-
-
-
-
-
-
-
-.navbarNames:hover{
-  color: #ea58f9;
-  text-shadow:0 0 0.5em rgb(110, 237, 237);
+#navbarLogoContainer{
+  text-align: center;
 }
-
-.text-rainbow-animation {
-  font-family: 'Orbitron', sans-serif;
-  font-family:arial black;
-  background-image: 
-    linear-gradient(to right, #ea58f9,#ea58f9, rgb(110, 237, 237),rgb(110, 237, 237),rgb(110, 237, 237), #ea58f9,#ea58f9 ); 
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;  
-  animation: rainbow-animation 2500s linear infinite;
-}
-
-@keyframes rainbow-animation {
-    to {
-        background-position: 4500vh;
-    }
-} */
